<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".KullaniciSmsKayit">

    <EditText
        android:id="@+id/editTextAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ad"
        android:inputType="textCapWords"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"/>

    <EditText
        android:id="@+id/editTextSoyad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/soyad"
        android:inputType="textCapWords"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"/>

    <EditText
        android:id="@+id/editTextSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/Sifre"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"/>

    <Button
        android:id="@+id/kullaniciSmsKayitOl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yeşil"
        android:text="@string/kayit_ol_kayit"
        tools:ignore="VisualLintButtonSize" />




</LinearLayout>