<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/arkayeşil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SmsKayit2"
    android:padding="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefonunuza_sms_olarak_gönderilen_kodu_giriniz"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/login_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:hint="@string/kod"
            android:inputType="number"
            android:maxLength="6"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/ileri_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yeşil"
            android:text="@string/ileri" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/yeşil" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kodu_30_sn_içinde_yeniden_gönderin"
        android:id="@+id/resend_otp_textview"/>

</LinearLayout>