<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkayeşil"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/telefon_numaranizi_giriniz"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="12dp">

        <com.hbb20.CountryCodePicker
            app:ccp_defaultNameCode="TR"
            android:id="@+id/login_countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_defaultLanguage="TURKISH"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            tools:ignore="MissingClass" />

        <EditText
            android:id="@+id/editTextTelefonNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:hint="@string/telefon"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/kodGonder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yeşil"
            android:text="@string/kod_gönder"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/arkayeşil" />
    </LinearLayout>

</LinearLayout>